--- a/Diamond EYE/Base.lproj/Main.storyboard
+++ b/Diamond EYE/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="ksx-2N-wcm">
-                                <rect key="frame" x="-6" y="-2" width="606" height="604"/>
+                                <rect key="frame" x="-6" y="0.0" width="606" height="604"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="604" id="QGf-d1-NaL"/>
                                 </constraints>
@@ -65,13 +65,6 @@
                                 <color key="textColor" red="0.94901961089999998" green="0.96470588450000005" blue="0.054901961239999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xYo-dz-cjF">
-                                <rect key="frame" x="515" y="289" width="20" height="30"/>
-                                <state key="normal" image="InfoButton"/>
-                                <connections>
-                                    <segue destination="kHn-0S-bTA" kind="show" id="KVi-S7-H8V"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BEN-ot-r6c">
                                 <rect key="frame" x="250" y="281" width="100" height="37"/>
                                 <constraints>
@@ -119,7 +112,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NNT-5a-dNc">
-                                <rect key="frame" x="80" y="289" width="20" height="30"/>
+                                <rect key="frame" x="79" y="283" width="47" height="45"/>
                                 <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" image="StartOverIcon">
                                     <color key="titleColor" red="0.94901961089999998" green="0.96470588450000005" blue="0.054901961239999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -129,13 +122,21 @@
                                     <action selector="startOverBut" destination="BYZ-38-t0r" eventType="touchUpInside" id="P50-ri-Sut"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xYo-dz-cjF">
+                                <rect key="frame" x="493" y="281" width="54" height="47"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <state key="normal" image="InfoButton"/>
+                                <connections>
+                                    <segue destination="kHn-0S-bTA" kind="show" id="KVi-S7-H8V"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="ksx-2N-wcm" firstAttribute="top" secondItem="T5A-CC-nQc" secondAttribute="bottom" constant="-359" id="2G7-8B-yh5"/>
-                            <constraint firstItem="xYo-dz-cjF" firstAttribute="trailing" secondItem="Cyx-Nd-bOd" secondAttribute="trailing" constant="-45" id="3Ud-CR-hI0"/>
-                            <constraint firstItem="ymk-IP-RPB" firstAttribute="trailing" secondItem="NNT-5a-dNc" secondAttribute="trailing" constant="-6" id="3kr-ob-bkN"/>
-                            <constraint firstItem="NNT-5a-dNc" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="60" id="7AC-gR-Ofo"/>
+                            <constraint firstItem="ksx-2N-wcm" firstAttribute="top" secondItem="T5A-CC-nQc" secondAttribute="bottom" constant="-357" id="2G7-8B-yh5"/>
+                            <constraint firstItem="xYo-dz-cjF" firstAttribute="trailing" secondItem="Cyx-Nd-bOd" secondAttribute="trailing" constant="-33" id="3Ud-CR-hI0"/>
+                            <constraint firstItem="ymk-IP-RPB" firstAttribute="trailing" secondItem="NNT-5a-dNc" secondAttribute="trailing" constant="-32" id="3kr-ob-bkN"/>
+                            <constraint firstItem="NNT-5a-dNc" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="59" id="7AC-gR-Ofo"/>
                             <constraint firstItem="BEN-ot-r6c" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8JC-c7-6W6"/>
                             <constraint firstItem="dCu-RO-s7I" firstAttribute="trailing" secondItem="tS5-SM-GKZ" secondAttribute="trailing" id="9hR-sq-g2l"/>
                             <constraint firstItem="P1A-kY-NZn" firstAttribute="leading" secondItem="ymk-IP-RPB" secondAttribute="trailing" constant="8" symbolic="YES" id="BCH-Lk-XcX"/>
@@ -148,7 +149,7 @@
                             <constraint firstItem="ksx-2N-wcm" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-26" id="KnP-0p-6ly"/>
                             <constraint firstItem="0O2-yM-tHa" firstAttribute="firstBaseline" secondItem="rSg-rA-h7E" secondAttribute="firstBaseline" id="KsZ-DC-PGk"/>
                             <constraint firstItem="P1A-kY-NZn" firstAttribute="top" secondItem="0O2-yM-tHa" secondAttribute="bottom" constant="66" id="LW4-zx-5nS"/>
-                            <constraint firstItem="NNT-5a-dNc" firstAttribute="centerY" secondItem="xYo-dz-cjF" secondAttribute="centerY" id="MIF-9W-VBV"/>
+                            <constraint firstItem="NNT-5a-dNc" firstAttribute="centerY" secondItem="xYo-dz-cjF" secondAttribute="centerY" constant="1" id="MIF-9W-VBV"/>
                             <constraint firstItem="tS5-SM-GKZ" firstAttribute="baseline" secondItem="JqU-zB-NOZ" secondAttribute="baseline" id="Qdy-D1-4ib"/>
                             <constraint firstItem="BEN-ot-r6c" firstAttribute="centerX" secondItem="P1A-kY-NZn" secondAttribute="centerX" id="R31-oL-Tb4"/>
                             <constraint firstItem="0O2-yM-tHa" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="112" id="Xbp-pM-m5j"/>
@@ -157,7 +158,7 @@
                             <constraint firstItem="Cyx-Nd-bOd" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="ceN-n0-nSa"/>
                             <constraint firstItem="T5A-CC-nQc" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="cg4-bx-cGp"/>
                             <constraint firstItem="0O2-yM-tHa" firstAttribute="centerX" secondItem="P1A-kY-NZn" secondAttribute="centerX" constant="-2.5" id="fP0-4e-pE5"/>
-                            <constraint firstItem="T5A-CC-nQc" firstAttribute="top" secondItem="NNT-5a-dNc" secondAttribute="bottom" constant="17" id="fSB-fE-2gT"/>
+                            <constraint firstItem="T5A-CC-nQc" firstAttribute="top" secondItem="NNT-5a-dNc" secondAttribute="bottom" constant="8" id="fSB-fE-2gT"/>
                             <constraint firstItem="T5A-CC-nQc" firstAttribute="baseline" secondItem="JqU-zB-NOZ" secondAttribute="baseline" id="fmL-f8-SfI"/>
                             <constraint firstItem="tS5-SM-GKZ" firstAttribute="firstBaseline" secondItem="JqU-zB-NOZ" secondAttribute="firstBaseline" id="gqV-ec-5jf"/>
                             <constraint firstItem="T5A-CC-nQc" firstAttribute="firstBaseline" secondItem="JqU-zB-NOZ" secondAttribute="firstBaseline" id="hI5-GB-lNU"/>
